@@ -115,6 +115,12 @@ class TestUrlToPath(TestCase):
         eq('http://host/ab/%C2%B5/%C2%B5',
             normalize_url(u'http://host/ab/%C2%B5/\xb5'))
 
+        # Unescape characters that don't need to be escaped
+        eq('http://host/~bob%2525-._',
+                normalize_url('http://host/%7Ebob%2525%2D%2E%5F'))
+        eq('http://host/~bob%2525-._',
+                normalize_url(u'http://host/%7Ebob%2525%2D%2E%5F'))
+
         # Normalize verifies URLs when they are not unicode
         # (indicating they did not come from the user)
         self.assertRaises(InvalidURL, normalize_url, 'http://host/\xb5')
