@@ -77,6 +77,9 @@ IN DEVELOPMENT
     * Single-letter short options are no longer globally declared.  (Martin
       Pool)
 
+    * urlutils.normalize_url now unescapes unreserved characters, such as "~".
+      (Andrew Bennetts)
+
   BUG FIXES:
 
     * ``bzr missing --verbose`` was showing adds/removals in the wrong
